# filerecover

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md
.github/workflows/: windows-mingw-ci.yml
docs/: DEVELOPMENT_GUIDELINES.md  README.md  architecture.md  requirements.md  requirements_analysis.md
docs/work_sessions/: 2025-12-09-session.md  2025-12-22-chat-log.md  2025-12-23-session.md
scripts/: build_engine.ps1  end_of_day.ps1
src/app/: README.md
src/engine/: CMakeLists.txt  README.md  README_ENGINE.md
src/engine/include/: disk_io.h  fr.h  ntfs.h  ntfs_mft.h
src/engine/src/: disk_io_stub.cpp  disk_io_win.cpp  fr_stub.cpp  ntfs_capi.cpp  ntfs_mft.cpp  ntfs_mft_stub.cpp  ntfs_stub.cpp
src/tests/: disk_io_test.cpp  engine_test.cpp  ntfs_test.cpp
tests/: README.md
